--- a/LuyentapHam1/BAi2.html
+++ b/LuyentapHam1/BAi2.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  function call(x){
+    x++;
+    return x
+    alert(x)
+  }
+  let y=call(3)
+  document.write(y)
+</script>
 </body>
 </html>
