--- a/LuyentapHam1/BAi5.html
+++ b/LuyentapHam1/BAi5.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+  let  enter = prompt("Enter a star!!");
+  let m1=["Polaris", "Aldebaran","Deneb", "Vega", "Altair","Dubhe","Regulus"]
+  let m2=["Ursa Minor", "Tarurus", "Cygnus", "Lyra", "Aquila", "Ursa Major,Leo"]
+  function check(){
+    let result="";
+    for (let i=0;i<m1.length;i++){
+      if(enter==m1[i] ){
+        result=m2[i];
+        return result
+      }else{
+        result="Khong thay"
+      }
+      return result
+    }
+  }
+let kq=check();
+alert(kq)
+</script>
 </body>
 </html>
