--- a/LuyentapHam1/bai3.html
+++ b/LuyentapHam1/bai3.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+ <script>
+   let a=parseInt(prompt("Enter a"))
+   let b=parseInt(prompt("enter b"))
+   function check(a,b){
+     if (a>b){
+       alert("a lon hon b")
+
+     }else {if(a==b ){
+       alert("a bang b")
+     }else{if(a<b){
+       alert("a bang b")
+     }
+
+     }
+     }
+   }
+   check()
+ </script>
 </body>
 </html>
