--- a/Luyentap2/BAi1.html
+++ b/Luyentap2/BAi1.html
@@ -6,12 +6,11 @@
 </head>
 <body>
 <script>
-  function call(x){
-          x++;
-          return x
+  let a=parseInt(prompt("enter a numver"))
+  function square(a){
+    return a*a;
   }
-  let y=call(3)
-  document.write(y)
+  alert(square(a))
 </script>
 </body>
 </html>
